--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 </head>
 
 <body style=" background-color: #FFFFFF"  class="body_style">
-    <header>
+    <header class="office-style">
+        <div class="div-container">
         <nav>
             <a class="logo_link" href="./index.html">Web<span style="color: #2e2f42" class="logotext">Studio</span></a>
 
@@ -33,6 +34,7 @@
                 <li><a class="link_color" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
+    </div>
         
     </header>
     <main>
