--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 
 <body style=" background-color: #FFFFFF"  class="body_style">
-    <header>
-        <div class="div-container" class="office-style">
+    <header class="office-style">
+        <div class="div-container">
         <nav>
             <a class="logo_link" href="./index.html">Web<span style="color: #2e2f42" class="logotext">Studio</span></a>
 
