--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body style=" background-color: #FFFFFF"  class="body_style">
     <header class="office-style">
         <div class="div-container">
-        <nav>
+        <nav class="nav-style">
             <a class="logo_link" href="./index.html">Web<span style="color: #2e2f42" class="logotext">Studio</span></a>
 
             <ul class="ul_style">
