--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 </head>
 
 <body style=" background-color: #FFFFFF"  class="body_style">
-    <header class="office-style">
-        <div class="div-container">
-        <nav class="nav-style">
+    <header class="header-style">
+        <div>
+        <nav>
             <a class="logo_link" href="./index.html">Web<span style="color: #2e2f42" class="logotext">Studio</span></a>
 
             <ul class="ul_style">
