--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body style=" background-color: #FFFFFF"  class="body_style">
     <header class="header-style">
-        <div>
+        <div class="div-style">
         <nav>
             <a class="logo_link" href="./index.html">Web<span style="color: #2e2f42" class="logotext">Studio</span></a>
 
