--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
     </header>
     <main>
-        <div class="containerone">
+        <div>
         <section class="firs-area">
             
                 <h1 class="head-style">Effective Solutions for Your Business</h1>
