--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
             </ul>
 
         </nav>
+    </div>
         <address class="contact">
             <ul class="ul_style">
                 <li><a class="link_color" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="link_color" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
-    </div>
+   
         
     </header>
     <main>
@@ -48,7 +49,7 @@
         </section>
         
 
-        <section>
+        <section class="section-two">
                  <h2 hidden>Portfolio</h2>     
                 <ul class="section2">
                     <li><h3 class="head">Strategy</h3><p class="texts">Our goal is to identify the business problem to walk away with the perfect and creative
