--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         </section>
 
          <section id="contacts" class="sectionthree">
+            <div class="container">
             <h2 class="sectionthreehead">Our Team</h2>
             <ul class="ul_style3">
                 <li class="sectionthreelist"><img src="./images/mark.jpg" alt="Mark Guerrero" width="264"><h3 class="head">Mark Guerrero</h3><p class="texts">Product Designer</p></li>
@@ -83,6 +84,7 @@
 
                 <li class="sectionthreelist"><img src="./images/daniel-wilson.jpg" alt="Daniel Wilson" width="264"><h3 class="head">Daniel Wilson</h3><p class="texts">UI Designer</p></li>
             </ul>
+        </div>
         </section>
        
         <section id="portfolio" class="sectionthree">
